style(SpecsSparkSlick): prevent overflowing

--- a/src/components/ProductPage/SpecsColchaoSlick/SpecsColchaoSlick.module.scss
+++ b/src/components/ProductPage/SpecsColchaoSlick/SpecsColchaoSlick.module.scss
@@ -973,6 +973,12 @@
           }
         }
       }
+
+      .SpecsColchaoSlickSecondSliderBackgroundSuporteRight, .SpecsColchaoSlickSecondSliderBackgroundSuporteLeft {
+        &Image {
+          width: 46%;
+        }
+      }
     }
   }
 }
